--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<p> 大家好，这是我的个人主页 </p>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Fireworks Website</title>
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <script src="script.js"></script>
+</head>
+<body>
+    <canvas id="fireworksCanvas"></canvas>
+</body>
+</html>
