--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Fireworks Website</title>
-    <link rel="stylesheet" type="text/css" href="./css/style.css">
-    <script src="script.js"></script>
-</head>
-<body>
-    <canvas id="fireworksCanvas"></canvas>
-</body>
+    <head>
+        <title>Fireworks Website</title>
+        <link rel="stylesheet" type="text/css" href="./css/style.css">
+        <script src="./js/script.js"></script>
+    </head>
+    <body>
+        <canvas id="fireworksCanvas"></canvas>
+    </body>
 </html>
