--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
         <script src="./js/script.js"></script>
     </head>
     <body>
-        <canvas id="fireworksCanvas"></canvas>
+        <div id="contain">
+  <div id="box">
+    <div class="board"></div>
+    <div class="ball"></div>
+  </div>
+  <button>开始游戏</button><br>
+  <span>Score：</span>
+  <span class="score">0</span> 
+</div>
     </body>
 </html>
+
