--- a/index.html
+++ b/index.html
@@ -1,20 +1,37 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Fireworks Website</title>
-        <link rel="stylesheet" type="text/css" href="./css/style.css">
-        <script src="./js/script.js"></script>
-    </head>
-    <body>
-        <div id="contain">
-  <div id="box">
-    <div class="board"></div>
-    <div class="ball"></div>
-  </div>
-  <button>开始游戏</button><br>
-  <span>Score：</span>
-  <span class="score">0</span> 
-</div>
-    </body>
+  <head>
+    <style>
+      body {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        background-color: lightblue;
+      }
+      .box {
+        width: 200px;
+        height: 200px;
+        background-color: white;
+        border-radius: 10px;
+        box-shadow: 0 0 10px black;
+        text-align: center;
+        line-height: 200px;
+        font-size: 36px;
+        color: black;
+        animation: rotate 5s linear infinite;
+      }
+      @keyframes rotate {
+        from {
+          transform: rotate(0deg);
+        }
+        to {
+          transform: rotate(360deg);
+        }
+      }
+    </style>
+  </head>
+  <body>
+    <div class="box">Hello HTML!</div>
+  </body>
 </html>
-
