--- a/index.html
+++ b/index.html
@@ -1,20 +1,39 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Fireworks Website</title>
-        <link rel="stylesheet" type="text/css" href="./css/style.css">
-        <script src="./js/script.js"></script>
-    </head>
-    <body>
-        <div id="contain">
-  <div id="box">
-    <div class="board"></div>
-    <div class="ball"></div>
-  </div>
-  <button>开始游戏</button><br>
-  <span>Score：</span>
-  <span class="score">0</span> 
-</div>
-    </body>
-</html>
+<html lang="en">
 
+<head>
+  <meta charset="UTF-8">
+  <title>HTML5/CSS3圆盘时钟动画DEMO演示</title>
+  <link rel="stylesheet" href="./css/style.css">
+</head>
+
+<body>
+
+      <div class="clock">
+        <div class="hourHand"></div>
+        <div class="minuteHand"></div>
+        <div class="secondHand"></div>
+        <div class="center"></div>
+        <div class="time"></div>
+        <ul>
+            <li><span>1</span></li>
+            <li><span>2</span></li>
+            <li><span>3</span></li>
+            <li><span>4</span></li>
+            <li><span>5</span></li>
+            <li><span>6</span></li>
+            <li><span>7</span></li>
+            <li><span>8</span></li>
+            <li><span>9</span></li>
+            <li><span>10</span></li>
+            <li><span>11</span></li>
+            <li><span>12</span></li>
+        </ul>
+    </div>
+
+    <audio src="5[kb]sidestick.aif.mp3" class="audio"></audio>
+	
+    <script src="./js/index.js"></script>
+</body>
+
+</html>
